test/files/neg/early-type-defs.check
early-type-defs.scala:4: error: early initializers are no longer supported; use trait parameters instead
object Test extends { type A1 = Int } with Runnable { def run() = () }
                    ^
early-type-defs.scala:4: error: ';' expected but 'with' found.
object Test extends { type A1 = Int } with Runnable { def run() = () }
                                      ^
two errors found
